--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="header">
-    <h1 >Perfumes</h1>
+    <h1 >DCS</h1>
     <ul>
         <li>Home |</li>
         <li>Products |</li>
